bk_ida/gccida/c1/get_last_value
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_last_value/src/combine.c:11986:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v2.rtwint = ( __int64)x->fld[0]; 
                      ^~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_last_value/src/combine.c:11992:35: error: use of undeclared identifier 'machine_mode'
return gen_lowpart_for_combine( ( machine_mode)*( ( unsigned __int8 *)x + 2), last_value); 
                                  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/get_last_value/src/obj/combine.o] Error 1
